# com.webos.service.location

./: CMakeLists.txt  README.md  oss-pkg-info.yaml
ServiceAgent/: ConnectionStateObserver.cpp  JsonUtility.c  LifeCycleMonitor.cpp  LocationService.cpp  LocationServiceState.cpp  LunaCriteriaCategoryHandler.cpp  LunaLocationServiceUtil.cpp  LunaLocationService_Util.cpp
files/etc/: geocode.conf  geolocation.conf  gpsConfig.conf  mock.conf  wsp.conf
files/launch/: location.in
files/sysbus/: com.palm.location.json.prv.in  com.palm.location.json.pub.in  com.palm.location.role.json.in  com.palm.location.service.prv.in  com.palm.location.service.pub.in  com.webos.service.location.api.json  com.webos.service.location.groups.json  com.webos.service.location.perm.json  com.webos.service.location.role.json.in  com.webos.service.location.service.in
include/: Accuracy.h  Address.h  Cell_Handler.h  Conf.h  ConnectionStateObserver.h  GPSNyxInterface.h  GPSPositionProvider.h  GPSServiceConfig.h  GeoAddress.h  GeoCodeInterface.h  GeoLocation.h  GoogleGeoImpl.h  GoogleWSP.h  Google_Handler.h  GpsWanInterface.h  Gps_Handler.h  Gps_stored_data.h  HandlerBase.h  HandlerRequestCommands.h  Handler_Interface.h  HttpInterface.h  IConnectivityListener.h  ILocationCallbacks.h  JsonUtility.h  LBSEngine.h  Lbs_Handler.h  LifeCycleMonitor.h  Location.h  LocationManagerService.h  LocationService.h  LocationServiceState.h  LocationService_Log.h  LocationWebServiceProvider.h  Location_Plugin.h  LunaCriteriaCategoryHandler.h  LunaLbsRequest.h  LunaLocationServiceUtil.h  LunaLocationService_Util.h  MapServicesImpl.h  MapServicesInterface.h  (+20 more)
src/: LocationManagerService.c  Main.cpp
src/db_utils/: CMakeLists.txt  Gps_stored_data.c  Gps_stored_data.h  db_util.c
src/handler/: Accuracy.c  Address.c  CMakeLists.txt  Cell_Handler.c  Google_Handler.c  Gps_Handler.c  Handler_Interface.c  Lbs_Handler.c  Network_Handler.c  Plugin_Loader.c  Position.c  Satellite.c  Satellite.cpp  Velocity.c  Wifi_Handler.c
src/handler/lbs/: LBSEngine.cpp
src/handler/lbs/geoservices/: LocationWebServiceProvider.cpp  MapServicesImpl.cpp  WSPConfigurationFileParser.cpp
src/handler/lbs/geoservices/google/: GoogleGeoImpl.cpp  GoogleWSP.cpp
src/handler/position/gps/: GPSNyxInterface.cpp  GPSPositionProvider.cpp  GPSServiceConfig.cpp  GpsWanInterface.cpp  HandlerBase.cpp  NtpClient.cpp  gps_cfg.cpp
src/handler/position/network/: NetworkData.cpp  NetworkPositionProvider.cpp
src/httphandler/: CMakeLists.txt  http_request_handler.c
src/lunaIpc/: ConnectionStateObserver.cpp  JsonUtility.c  JsonUtility.cpp  LifeCycleMonitor.cpp  LocationService.cpp  LunaLocationServiceUtil.cpp
src/mock/: GpsMockLocation.c  MockLocation.c  NetworkMockLocation.c
src/plugin/CellPlugin/: CMakeLists.txt  Cell_Plugin.c
src/plugin/GoogleLbsPlugin/: CMakeLists.txt  Google_Lbs_Plugin.c
src/plugin/GpsPlugin/: CMakeLists.txt  Gps_Plugin.c
src/plugin/LbsPlugin/: CMakeLists.txt  Lbs_Plugin.c
src/plugin/NetworkPlugin/: CMakeLists.txt  Network_Plugin.c
src/plugin/WifiPlugin/: CMakeLists.txt  Wifi_Plugin.c
src/utils/: GeoAddress.cpp  GeoLocation.cpp  Gps_stored_data.cpp  NetworkRequestManager.cpp  db_util.cpp
