set(HTTP_HANDLER_NAME httphandler)
set(HTTP_HANDLER_PATH ${CMAKE_INSTALL_PREFIX}/lib/)
set(HTTP_HANDLER_SRC http_request_handler.c)
set(LIBRARIES ${GLIB2_LDFLAGS} ${GEOCLUE_LDFLAGS} ${LIB2XML_LDLAGS} ${LIBCURL_LDFLAGS})

add_library(${HTTP_HANDLER_NAME} SHARED ${HTTP_HANDLER_SRC})
target_link_libraries(${HTTP_HANDLER_NAME} ${LIBRARIES})
set_target_properties(${HTTP_HANDLER_NAME} PROPERTIES VERSION 1.0.0 SOVERSION 1)
install(TARGETS ${HTTP_HANDLER_NAME} DESTINATION ${HTTP_HANDLER_PATH})
