# @@@LICENSE
#
#   Copyright (c) 2012-2013 LG Electronics Inc. All Rights Reserved
#
# LICENSE@@@

set(GOOGLE_LBS_PLUGIN_NAME googlelbs)
set(GOOGLE_LBS_PLUGIN_PATH ${CMAKE_INSTALL_PREFIX}/lib/location/plugins)

set(GOOGLE_LBS_PLUGIN_SRC Google_Lbs_Plugin.c)

set(LIBRARIES ${GLIB2_LDFLAGS} ${GEOCLUE_LDFLAGS} ${PMLOGLIB_LDFLAGS})

add_library(${GOOGLE_LBS_PLUGIN_NAME} SHARED ${GOOGLE_LBS_PLUGIN_SRC})
target_link_libraries(${GOOGLE_LBS_PLUGIN_NAME} ${LIBRARIES} dbutils)
install (TARGETS ${GOOGLE_LBS_PLUGIN_NAME} DESTINATION ${GOOGLE_LBS_PLUGIN_PATH})
